--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "galinheiro-app",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test:connection": "node test-connection.js"
   },
   "dependencies": {
     "react": "^18.0.0",
