--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "test:connection": "node test-connection.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.0",
+    "@vercel/speed-insights": "^1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.20.0",
-    "@supabase/supabase-js": "^2.38.0"
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^4.0.0",
     "eslint": "^8.0.0",
-    "eslint-plugin-react": "^7.0.0"
+    "eslint-plugin-react": "^7.0.0",
+    "vite": "^4.0.0"
   }
 }
