📝 Docs: Clarifica formato Environment Variables Vercel
✅ Correções na documentação:
- Formato correto key:value para Vercel
- Instruções passo-a-passo mais claras
- Separação das duas variáveis necessárias
- Adicionado passo de Redeploy

🎯 Agora está claro como configurar:
EMBRAPA_CONSUMER_KEY = Gu1cl2cXpRt8mPwOw0IjntwrnZsa
EMBRAPA_CONSUMER_SECRET = 4kVqfR7tip5lm2rPKfKuj3gofFoa

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "api/weather/[...path].js": {
+    "api/weather/data-real.js": {
       "runtime": "@vercel/node"
     }
   },
@@ -9,12 +9,5 @@
       "source": "/api/weather/(.*)",
       "destination": "/api/weather/$1"
     }
-  ],
-  "env": {
-    "EMBRAPA_CONSUMER_KEY": "@embrapa-consumer-key",
-    "EMBRAPA_CONSUMER_SECRET": "@embrapa-consumer-secret",
-    "EMBRAPA_TOKEN_URL": "https://api.cnptia.embrapa.br/token",
-    "EMBRAPA_API_URL": "https://api.cnptia.embrapa.br/climapi/v1",
-    "NODE_ENV": "production"
-  }
+  ]
 }
