--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.38.0",
     "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^17.2.3",
+    "openmeteo": "^1.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.20.0"
